--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <title>Entertainment Ottawa</title>
         </header>
         <section>
-            
+           <h1> Entertainment Ottawa Website </h1> 
         </section>
         <footer>
 
