--- a/index.html
+++ b/index.html
@@ -41,18 +41,20 @@
                 <h1>Capital Raters</h1>
                 <p>User Friendly. Interactive. Effective.</p>
             </div>
-            <div class="firstimg">
+            <div class="introimg">
                 <img src="img/ottawa-words.jpg">
             </div>
         </div>
 
         <div class="middle-container">
-            <div class="secondimg">
-            
+            <div class="introimg">
+                <img src="">
             </div>
             <div class="aboutsec">
-                <h1>Capital Raters</h1>
-                <p>User Friendly. Interactive. Effective.</p>
+                <h2>All about capital Raters</h2>
+                <p>The visualization will benefit anyone who isn't familar with Ottawa (International Students, Tourists,...)
+                    Or has an interest in knowing more about the city's culture.
+                </p>
             </div>
             
         </div>
