--- a/about.html
+++ b/about.html
@@ -199,6 +199,10 @@
 
             <div class="info" id="black">
                 <h2>Design Process</h2>
+
+                <img src="img/capital raters (2).png">
+
+
                 
             </div>
 
