--- a/about.html
+++ b/about.html
@@ -200,6 +200,8 @@
             <div class="info" id="black">
                 <h2>Design Process</h2>
 
+                <img src="img/4.png">
+
                 <img src="img/capital raters (2).png">
 
 
