--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 				</div>
 				<div class="collapse" id="mainlist">
 					<ul>
-						<li><a href="about.html">About</a></li>
-						<li><a href="#portfolio">Progress</a></li>
-						<li><a href="#contact">Meet our Team</a></li>
+						<li><a href="about.html">Progress</a></li>
 					</ul>
 				</div>
 				<div class="media_button">
