--- a/about.html
+++ b/about.html
@@ -13,21 +13,15 @@
         <script src="app.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="js/scripts.js"></script>
-        <script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
-        <script type="text/javascript">
-            function initViz() {
-                    var containerDiv = document.getElementById("vizContainer"),
-                        url = "http://public.tableau.com/views/RegionalSampleWorkbook/Storms",
-                        options = {
-                            hideTabs: true,
-                            onFirstInteractive: function () {
-                                console.log("Run this code when the viz has finished loading.");
-                            }
-                        };
-
-                    var viz = new tableau.Viz(containerDiv, url, options);
-                    // Create a viz object and embed it in the container div.
-            }
+        
+        <script type='text/javascript'>
+            var divElement = document.getElementById('viz1617895059022');
+            var vizElement = divElement.getElementsByTagName('object')[0];
+            vizElement.style.width = '100%';
+            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+            var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);
         </script>
     </head>
     </head>
@@ -225,7 +219,34 @@
 
             <div onload="initViz();" id="grey">
                 <h2>Final Visualization</h2>
-                <div id="vizContainer" style="width:800px; height:700px;"></div>
+                <div class='tableauPlaceholder' id='viz1617895059022' style='position: relative'><noscript><a href='#'><img
+                                alt='Sheet 1 '
+                                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;BZ&#47;BZRYN4DKZ&#47;1_rss.png'
+                                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                        <param name='embed_code_version' value='3' />
+                        <param name='path' value='shared&#47;BZRYN4DKZ' />
+                        <param name='toolbar' value='yes' />
+                        <param name='static_image'
+                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;BZ&#47;BZRYN4DKZ&#47;1.png' />
+                        <param name='animate_transition' value='yes' />
+                        <param name='display_static_image' value='yes' />
+                        <param name='display_spinner' value='yes' />
+                        <param name='display_overlay' value='yes' />
+                        <param name='display_count' value='yes' />
+                        <param name='language' value='en' />
+                        <param name='filter' value='publish=yes' />
+                    </object></div>
+                <script
+                    type='text/javascript'> 
+                    var divElement = document.getElementById('viz1617895059022'); 
+                    var vizElement = divElement.getElementsByTagName('object')[0]; 
+                    vizElement.style.width = '100%'; 
+                    vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+                    var scriptElement = document.createElement('script'); 
+                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                    vizElement.parentNode.insertBefore(scriptElement, vizElement);
+                </script>
             </div>
 
             <div class="info" id="black">
