--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<div class="collapse" id="mainlist">
 					<ul>
 						<li><a href="about.html">Progress</a></li>
+						<li><a href="map.html">Visualization</a></li>
 					</ul>
 				</div>
 				<div class="media_button">
@@ -32,7 +33,6 @@
 			</div>
 		</nav>
 
-        <div class="clear"></div>
         <div class="intro-container">
         
             <div class="intro">
@@ -500,7 +500,7 @@
             </svg>
         </div>
         <div class="footer">
-        <h2>Footer</h2>
+        <h2>We hope you enjoy!</h2>
         </div>
         
     </body>
