--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                       background: #4b4b4b;
                       padding: 20px; 
                       width: 70%;
-                      height: 100px;
+                      height: auto;
                       display:block;
                   margin-left: auto;
                   margin-right: auto;  
@@ -90,7 +90,7 @@
                       background: #4b4b4b;
                       padding: 20px; 
                       width: 70%;
-                      height: 70px;  
+                      height: auto;  
                       display:block;
                       margin-left: auto;
                       margin-right: auto;
